# kzen

./: CMakeLists.txt  Doxyfile  ProjectHome.md  kzen.kdevelop  kzen.kdevelop.filelist  kzen.kdevelop.pcs  kzen.kdevses
cmake/: Findlibmtp.cmake
doc/kzen/: CMakeLists.txt
src/: CMakeLists.txt  devices.cpp  devices.h  kzen.cpp  kzen.desktop  kzen.h  kzenalbum.cpp  kzenalbum.h  kzenalbummodelitem.cpp  kzenalbummodelitem.h  kzenalbumview.cpp  kzenalbumview.h  kzenalbumviewmodel.cpp  kzenalbumviewmodel.h  kzendevice.cpp  kzendevice.h  kzendevicethread.cpp  kzendevicethread.h  kzendirnavbar.cpp  kzendirnavbar.h  kzenfile.cpp  kzenfile.h  kzenfiletransferview.h  kzenfiletransferviewmodel.cpp  kzenfiletransferwidget.h  kzenfolder.cpp  kzenmusicwidget.cpp  kzenmusicwidget.h  kzennavview.cpp  kzennavview.h  kzenobject.h  kzenplaylist.cpp  kzenplaylist.h  kzenplaylistview.h  kzenplaylistviewmodel.cpp  kzenplaylistviewmodel.h  kzensplash.cpp  kzensplash.h  kzentrack.cpp  kzentrack.h  (+12 more)
src/icons/: CMakeLists.txt
src/pics/: CMakeLists.txt
trunk/: CMakeLists.txt  kzen.kdevelop  kzen.kdevelop.filelist  kzen.kdevelop.pcs  kzen.kdevses
trunk/cmake/: Findlibmtp.cmake
trunk/doc/: CMakeLists.txt  index.docbook
trunk/src/: CMakeLists.txt  devices.h  kzen.cpp  kzen.desktop  kzen.h  kzen.qrc  kzenalbum.cpp  kzenalbummodelitem.h  kzenalbumview.h  kzenalbumviewmodel.cpp  kzenalbumviewmodel.h  kzendevice.cpp  kzendevice.h  kzendevicethread.cpp  kzendevicethread.h  kzendevicewidget.cpp  kzendevicewidget.h  kzendirnavbar.cpp  kzendirnavbar.h  kzenfile.cpp  kzenfile.h  kzenfiletransferview.cpp  kzenfiletransferviewmodel.h  kzenfiletransferwidget.cpp  kzenfolder.h  kzenmusicwidget.cpp  kzenmusicwidget.h  kzennavview.cpp  kzennavview.h  kzenobject.cpp  kzenphotowidget.cpp  kzenphotowidget.h  kzenplaylist.cpp  kzenplaylist.h  kzenplaylistview.cpp  kzenplaylistviewmodel.cpp  kzenplaylistviewmodel.h  kzensplash.cpp  kzensplash.h  kzentrack.cpp  (+11 more)
trunk/src/icons/: CMakeLists.txt
trunk/src/pics/: CMakeLists.txt  kzen_splash.xcf
trunk/templates/: cpp
