ADD_SUBDIRECTORY( icons )
FIND_PACKAGE( libmtp REQUIRED )
INCLUDE_DIRECTORIES(${KDE3_INCLUDE_DIRS}
                    ${LIBMTP_INCLUDE_DIR}
                    ${CMAKE_CURRENT_BINARY_DIR}
                    ${CMAKE_CURRENT_SOURCE_DIR} )

SET( SRC main.cpp kzen.cpp )
KDE3_ADD_UI_FILES( UI_SRC kzenwidget.ui )
ADD_DEFINITIONS( ${QT_DEFINITIONS} ${KDE3_DEFINITIONS} )
LINK_DIRECTORIES( ${KDE3_LIB_DIR} )
KDE3_AUTOMOC( ${SRC} ${UI_SRC} )
KDE3_ADD_EXECUTABLE( kzen ${SRC} ${UI_SRC} )
TARGET_LINK_LIBRARIES( kzen ${QT_AND_KDECORE_LIBS} kdeui ${LIBTMP_LIBRARY} )
INSTALL(TARGETS kzen
        RUNTIME DESTINATION ${CMAKE_INSTALL_PREFIX}/bin
        LIBRARY DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/kde3
        ARCHIVE DESTINATION ${CMAKE_INSTALL_PREFIX}/lib/kde3 )
INSTALL( FILES kzen.desktop DESTINATION ${CMAKE_INSTALL_PREFIX}/share/applications/kde )
INSTALL( FILES kzenui.rc DESTINATION ${CMAKE_INSTALL_PREFIX}/share/apps/kzen )
